modify dbconnector and add xml

--- a/dbconnector/connnector_config.ini
+++ b/dbconnector/connnector_config.ini
@@ -1,6 +1,6 @@
 [client]
-user=pps
-password=pps
-host=10.202.44.200
-port=3322
-database=pps_test
+user=levin
+password=123456
+host=127.0.0.1
+port=3306
+database=db0
